<resources>
    <string name="app_name">Tharwa</string>

    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="auth_200_ch0">veuillez consulter votre mail,pour récupérer le code d\'authentification</string>
    <string name="auth_200_ch1">Veuillez consulter votre sms,pour récupérer le code d\'authentification </string>

    <string name="auth_401">Vous n\'etes pas autorisé, authentification à échoué </string>

    <string name="succ_200">Authentifier</string>
    <string name="succ_201">Client créer correctement </string>
    <string name="err_400">Input invalide</string>
    <string name="err_403">Interdi,l\'accès à la resource n\'est pas pemis </string>
    <string name="err_405">Method not allowed</string>
    <string name="err_422">Unprocessable Entity: The request was well-formed but was unable to be followed due the semantic error</string>
    <string name="err_500">Erreur serveur</string>
    <string name="err_503">service Unavailable</string>
    <string name="Verif_int">Vérfiez votre connexion internet et réessayer</string>
    <string name="new_code">Ce code est expérer essayer avec le nouveau code donner</string>
    <string name="balance_count">Balance</string>
    <string name="taux_de_change">Taux de change</string>
    <string name="virement">Virement</string>
    <string name="changer_compte">Changer compte</string>
    <string name="compte_destinataire">Numéro du compte destinataire</string>
    <string name="num_compte">Numéro de compte</string>
    <string name="montant_virement">Montant du virement</string>
    <string name="code_tharwa">THR</string>
    <string name="virer">Virer</string>
    <string name="motif_virement">Motif du virement</string>
    <string name="photo_missing">Veuillez séléctionner une photo</string>
    <string name="nom_prenom"><![CDATA[Nom & Prénom :]]></string>
    <string name="wilaya_label">Wilaya :</string>
    <string name="commune_label">Commune :</string>
    <string name="err_connx"> Erreure de connexion</string>
    <string name="proceding">En cours</string>
    <string name="accountNumberInvalide">Le numéro de compte doit contenir 6 chiffres</string>
    <string name="montantNegatif">le montant doit être supriéure à zero</string>
    <string name="montantInvalide">Veuillez introduire un montant valide</string>


    <string name="compte_from">Sélectionner votre compte source:</string>
    <string name="compte_to">Sélectionner le compte de destination:</string>
    <string name="montant">Montant:</string>
    <string name="confirme_virme">Confirmer</string>

    <string name="new_vir">Nouveau Virement</string>

    <string name="curr_only">Vous avez uniquemetent le compte courant veuillez créer un autre compte </string>
    <string name="dzd">DZD</string>
    <string name="current">COURANT</string>
    <string name="saving">EPARGNE</string>
    <string name="usd">USD</string>
    <string name="euro">EURO</string>
    <string name="transactoin">Transaction</string>
    <string name="terminer">Terminer</string>
    <string name="virme_201">Votre transaction est effectuer avec succssès vous avez: </string>
    <string name="virme_201_suite">dans votre compte.</string>
    <string name="virme_404">Erreur 404: récepteur non trouvé</string>
    <string name="virme_400_2">Erreur 400: Input non valide</string>
    <string name="virme_400">Erreur 400: Balance insufisante</string>
    <string name="account_current">Compte courant</string>
    <string name="account_epargne">Compte epargne</string>
    <string name="account_euro">Compte Euro</string>
    <string name="account_dollars">Compte Dollars</string>
    <string name="Erreur">Erreur</string>


    <string name="token_key">7A277FC8CF4273B974C991C673422</string>
    <string name="refresh_token_key">4DAE21CD964FEAC6CC43F2614D478</string>
    <string name="shared_pref_name">com.solid.tharwa.sharedPref</string>
    <string name="information_compte">Information du compte destinataire</string>
    <string name="information_montant">Information sur le montant</string>
    <string name="nom_destinataire">Nom destinataire</string>
    <string name="label_montant_virement">Montant du virement : </string>
    <string name="virement_vers_tharwa">Virement vers THARWA</string>
    <string name="virement_externe">Virement externe</string>
    <string name="blocked_account_text">Désolé de vous informer que ce compte a été bloqué par nos banquier à cause de :</string>
    <string name="waiting_account_txt">Votre compte est toujours en phase de validation, merci d\'être compréhensible</string>


</resources>
