<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:id="@+id/virtome"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"

                android:textSize="14dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/confirmer_virme"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:fontFamily="roboto"
                android:textStyle="bold"
                android:text="@string/confirme_virme"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compte_from" />
                <Spinner
                    android:layout_marginTop="5dp"
                    android:id="@+id/spinner_compte_from"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compte_from" />
                <Spinner
                    android:layout_marginTop="5dp"
                    android:id="@+id/spinner_compte_to"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_marginTop="20dp"
                android:id="@+id/divider"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#EEEEEE" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/montant"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <EditText
                    android:id="@+id/montant_virme"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/montant"
                    android:layout_marginLeft="12dp"
                    android:fontFamily="roboto"
                    android:textSize="14sp"
                    android:inputType="number"
                    />
                <TextView
                    android:id="@+id/money_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DZD"
                    />
            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



</LinearLayout>
