<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:openDrawer="start">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!--  App Bare -->
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp">


            <android.support.v7.widget.Toolbar
                android:id="@+id/acount_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/balance_count_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00 DZD"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/count_type_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coumpte Courant"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="14sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/id_count_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="THW00345DZD"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/floatingButtons"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Pas de transaction"
                android:gravity="center|top"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

     <!--   <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/buttom_navigation_menu" />-->


        <LinearLayout
            android:id="@+id/floatingButtons"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:behavior_hideable="false"
            app:behavior_peekHeight="50dp"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            >
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/exchange_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rippleColor="@color/colorAccent"
            android:clickable="true"
            app:backgroundTint="@color/white"
            app:background="@color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/floatingButtons"
            app:layout_anchorGravity="left|top"
            android:layout_marginLeft="30dp"
            android:src="@drawable/ic_exchange_rate"
            android:focusable="true"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taux_de_change"
            app:layout_anchor="@id/floatingButtons"
            app:layout_anchorGravity="left|bottom"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/transfer_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rippleColor="@color/colorAccent"
            app:backgroundTint="@color/white"
            app:background="@color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/floatingButtons"
            app:layout_anchorGravity="center|top"
            android:src="@drawable/ic_transfer_money"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virement"
            app:layout_anchor="@id/floatingButtons"
            app:layout_anchorGravity="center|bottom"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/change_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rippleColor="@color/colorAccent"
            app:backgroundTint="@color/white"
            app:background="@color/white"
            app:fabSize="normal"
            app:layout_anchor="@id/floatingButtons"
            app:layout_anchorGravity="right|top"
            android:clickable="true"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_change_account"
            android:focusable="true"
            android:layout_marginEnd="30dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changer_compte"
            app:layout_anchor="@id/floatingButtons"
            app:layout_anchorGravity="right|bottom"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />




    </android.support.design.widget.CoordinatorLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        />

</android.support.v4.widget.DrawerLayout>
